OY-5812 Käytetään VTS:n autentikoituja /lukuvuosimaksu rajapintoja